@@ -40,7 +40,7 @@ extern "C" {
 @typedef JSChar
 @abstract A Unicode character.
 */
-#if (!defined(WIN32) && !defined(_WIN32)) || defined(__BUILDING_QT)
+#if !defined(WIN32) && !defined(_WIN32)
     typedef unsigned short JSChar;
 #else
     typedef wchar_t JSChar;
